--- a/set.env
+++ b/set.env
@@ -1,15 +1,15 @@
-OWNER_NAME="Ibrahim Adams"
-PREFIX="."
-PUBLIC_MODE='yes'
+OWNER_NAME="ĐØ₱Ɇ฿Øłł𒅒₵₳ⱤⱠɎ"
+PREFIX="*"
+PUBLIC_MODE='no'
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME= "BMW-MD"
+BOT_NAME= "✞๖ۣۜ𝐒ᏲᾀᕍṎᏔ✞"
 IMAGE_MENU= "https://telegra.ph/file/17c83719a1b40e02971e4.jpg"
-NUMERO_OWNER= "254710772666"
-OWNER_NAME= "᚛Ibrahim adams᚜"
+NUMERO_OWNER= "50946351133"
+OWNER_NAME= "✞๖ۣۜ𝐒ᏲᾀᕍṎᏔ✞★‡ᵂᴿᴸᴰ᭄"
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
-WARN_COUNT= ""
+WARN_COUNT= "3"
 OPENAI_API_KEY= ""
 STARTING_BOT_MESSAGE='yes'
-ANTI_DELETE_MESSAGE='yes'
+ANTI_DELETE_MESSAGE='no'
 SESSION_ID=''
