--- a/set.env
+++ b/set.env
@@ -7,7 +7,7 @@ BOT_NAME= "✞๖ۣۜ𝐒ᏲᾀᕍṎᏔ✞"
 IMAGE_MENU= "https://telegra.ph/file/17c83719a1b40e02971e4.jpg"
 NUMERO_OWNER= "50946351133"
 OWNER_NAME= "ĐØ₱Ɇ฿Øłł𒅒₵₳ⱤⱠɎ"
-DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
+DATABASE_URL= "postgresql://bmw_md_user:rB1c4THgeASpZnKa4HdOmkMHMC9C7v2J@dpg-cqd5571u0jms73e92du0-a.oregon-postgres.render.com/bmw_md"
 WARN_COUNT= "3"
 OPENAI_API_KEY= ""
 STARTING_BOT_MESSAGE='yes'
